--- a/.github/workflows/provisioning.yml
+++ b/.github/workflows/provisioning.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    name: Test Lambda Auth
+    name: Tests (Unit)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -16,10 +16,10 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: "1.21.3"
+          go-version: ${{ vars.GO_VERSION }}
 
       - name: Test
-        run: go test -v ./...
+        run: go test -race -count=1 ./internal/...
 
   build:
     name: Build and Package
@@ -32,10 +32,10 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: "1.21.3"
+          go-version: ${{ vars.GO_VERSION }}
 
       - name: Build
-        run: env GOOS=linux GOARCH=arm64 go build -o bootstrap main.go
+        run: env GOOS=linux GOARCH=arm64 go build -o bootstrap cmd/main.go
 
       - name: Package
         run: zip lambda.zip bootstrap
@@ -94,8 +94,6 @@ jobs:
         id: plan
         env:
           TF_VAR_bucket_name: ${{ secrets.AWS_BUCKET_TF_STATE }}
-          TF_VAR_vpc_id: ${{ vars.VPC_ID }}
-          TF_VAR_private_subnets: ${{ vars.PRIVATE_SUBNETS }}
         run: terraform plan -input=false
         continue-on-error: true
 
@@ -104,9 +102,6 @@ jobs:
         run: exit 1
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/main'
         env:
           TF_VAR_bucket_name: ${{ secrets.AWS_BUCKET_TF_STATE }}
-          TF_VAR_vpc_id: ${{ vars.VPC_ID }}
-          TF_VAR_private_subnets: ${{ vars.PRIVATE_SUBNETS }}
         run: terraform apply -input=false -auto-approve
